--- a/src/app/heat-map/heat-map.component.html
+++ b/src/app/heat-map/heat-map.component.html
@@ -8,7 +8,7 @@
     >
       <mat-icon>filter_list</mat-icon>
     </button>
-    <button mat-button (click)="heatMapChart()" *ngIf="small" class="chartBtn">
+    <button mat-button (click)="heatMapChart()" *ngIf="small">
       <mat-icon>format_align_justify</mat-icon>
     </button>
   </span>
