--- a/src/app/offline-sync/offline-sync.component.html
+++ b/src/app/offline-sync/offline-sync.component.html
@@ -28,6 +28,9 @@
           <a *ngIf="transaction.key" class="right" (click)="sync(transaction)">
             <mat-icon>sync</mat-icon>
           </a>
+          <a *ngIf="transaction.key" class="right" (click)="remove(transaction)">
+            <mat-icon>delete</mat-icon>
+          </a>
         </mat-card-header>
 
         <mat-card-content>
