--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -123,3 +123,9 @@
 .small {
   font-size: small;
 }
+.saving-chip {
+  font-size: small;
+  background: none;
+  color: dimgray;
+  position: inherit;
+}
