--- a/src/app/transaction/transaction.component.scss
+++ b/src/app/transaction/transaction.component.scss
@@ -49,15 +49,25 @@
   bottom: 0;
   z-index: 99;
 }
-
+.cat-button-row {
+  margin-left: 10px;
+  margin-top: 20px;
+  text-align: center;
+}
 .source-button-row {
   margin-left: 35px;
   margin-top: 20px;
 }
+.cat-button-row button,
 .source-button-row button,{
   margin-right: 5px;
   background: none;
 }
+.cat-button-row button {
+  color: black;
+  margin-bottom: 10px;
+}
+.cat-button-row .selected-cat,
 .source-button-row .selected-source {
   background-color: #90EE90;
   box-shadow: none
